syntax = "proto3";

package order.v1;

service OrderService {
  // Команды
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
  
  // Запросы
  rpc GetOrder(GetOrderRequest) returns (Order);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc GetOrderStatus(GetOrderStatusRequest) returns (GetOrderStatusResponse);
}

message Order {
  string id = 1;
  string customer_id = 2;
  string status = 3; // NEW, PAID, SHIPPED, DELIVERED, CANCELLED
  repeated OrderItem items = 4;
  double total_amount = 5;
  string shipping_address = 6;
  string payment_id = 7;
  string created_at = 8;
  string updated_at = 9;
}

message OrderItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double price = 4;
  double total = 5;
}

message CreateOrderRequest {
  string customer_id = 1;
  repeated OrderItem items = 2;
  string shipping_address = 3;
  string discount_code = 4;
}

message CreateOrderResponse {
  string order_id = 1;
  string status = 2;
}

message CancelOrderRequest {
  string order_id = 1;
}

message CancelOrderResponse {
  bool success = 1;
}

message UpdateOrderStatusRequest {
  string order_id = 1;
  string status = 2;
}

message UpdateOrderStatusResponse {
  bool success = 1;
}

message GetOrderRequest {
  string order_id = 1;
}

message ListOrdersRequest {
  string customer_id = 1;
  string status = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message ListOrdersResponse {
  repeated Order orders = 1;
  int32 total = 2;
}

message GetOrderStatusRequest {
  string order_id = 1;
}

message GetOrderStatusResponse {
  string status = 1;
}